--- a/src/components/Clock.css
+++ b/src/components/Clock.css
@@ -43,24 +43,27 @@
 .hand {
     position: absolute;
     top: 0px;
-    left: 0;
-    transform-origin: 2px 50%;
+    left: 50%;
+    /* transform-origin: 2px 50%; */
     /* transform: translate(-50%, -50%); */
 }
 
 .hour {
+    transform-origin: 1px 50%;
     /* width: 50px;
     height: 3px; */
     /* transform: rotateZ(20deg); */
 }
 
 .minute {
+    transform-origin: 0px 50%;
     /* width: 70px;
     height: 2px; */
     /* transform: rotateZ(60deg); */
 }
 
 .sec {
+    transform-origin: 0px 50%;
     top: 4px;
     /* width: 80px;
     height: 1px; */
